chore: stubs par rôle – chacun travaille sur sa partie (Marc/Hiba/Yanina)